<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

    <include layout="@layout/toolbar" />

    <ListView
            android:id="@+id/providers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp" />

    <ScrollView
            android:layout_height="match_parent"
            android:layout_width="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="12dp">

                <EditText
                        android:id="@+id/redirectUriInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/redirect_uri"
                        android:lines="1"
                        android:importantForAutofill="no"
                        android:inputType="textUri" />


                <EditText
                        android:id="@+id/redirectUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/redirect_url"
                        android:lines="1"
                        android:importantForAutofill="no"
                        android:inputType="textUri" />

                <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/email"
                        android:lines="1"
                        android:inputType="textEmailAddress"
                        android:importantForAutofill="no" />

                <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/phone_number"
                        android:lines="1"
                        android:importantForAutofill="no"
                        android:inputType="phone" />

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:importantForAutofill="no" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <Button
                        android:id="@+id/passwordLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login"
                        tools:ignore="ButtonStyle" />

                <Button
                        android:id="@+id/passwordSignup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/signup"
                        tools:ignore="ButtonStyle" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <Button
                        android:id="@+id/startPasswordless"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/start_passwordless" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="12dp">

                <EditText
                        android:id="@+id/verificationCode"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/code"
                        android:lines="1"
                        android:paddingTop="0dp"
                        android:importantForAutofill="no"
                        android:inputType="text" />

                <Button
                        android:id="@+id/phoneNumberPasswordless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/phone_number_passwordless" />
            </LinearLayout>

            <include layout="@layout/webauthn_signup" />

            <include layout="@layout/webauthn_login" />

            <include layout="@layout/callback_login" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
