<resources>
    <string name="add_new_fido2_device">Add new FIDO2 device</string>
    <string name="app_name">identity sdk demo</string>
    <string name="code">Code</string>
    <string name="devices_title">List of devices</string>
    <string name="email">Email</string>
    <string name="exchange_tkn_at">Exchange tkn with access token</string>
    <string name="family_name">Family name</string>
    <string name="fill_email_or_phone">Fill the email or the phone input</string>
    <string name="first_name">First name</string>
    <string name="friendly_name">Device name</string>
    <string name="given_name">Given name</string>
    <string name="java">Java</string>
    <string name="last_name">Last name</string>
    <string name="login">Login</string>
    <string name="login_with_fido2">Login with FIDO2</string>
    <string name="login_with_callback">Login with callback</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="phone_number_passwordless">SMS Passwordless</string>
    <string name="redirect_uri">Redirect URI for Passwordless</string>
    <string name="redirect_url">Redirect URL for signup template (optional)</string>
    <string name="remove">Remove</string>
    <string name="start_passwordless">Start Passwordless</string>
    <string name="signup">Signup</string>
    <string name="signup_with_fido2">Signup with FIDO2</string>
    <string name="tkn">Token</string>
</resources>
